--- a/application/admin/view/job/index.html
+++ b/application/admin/view/job/index.html
@@ -64,7 +64,7 @@
                 ,{field:'payload', title: '内容', minWidth: 400,excel_width:150}
                 ,{field:'attempts', title: '尝试发送次数', sort: true,excel_width:15}
                 ,{field:'created_at', title: '创建时间',excel_width:15}
-                ,{fixed: 'right', title:'操作', toolbar: '#actionbar', width:150}
+                ,{fixed: 'right', title:"{:__('Operate')}", toolbar: '#actionbar', width:150}
             ]]
             ,page: {
                 layout: ['limit', 'count', 'prev', 'page', 'next', 'skip'] //自定义分页布局
