--- a/application/admin/view/auth/admin/index.html
+++ b/application/admin/view/auth/admin/index.html
@@ -174,19 +174,26 @@
             ,cols: [[
                 {type:'checkbox', fixed: 'left',}
                 ,{field:'id', title: 'ID', sort: true, excel_width:15}
-                ,{field:'username', title: '登陆账号', excel_width:15, searchList:{type:'input',operate:'LIKE'}}
-                ,{field:'nickname', title: '昵称', excel_width:15, searchList:{type:'input',operate:'LIKE'}}
-                ,{field:'groups_text', title: '角色', excel_width:15}
-                ,{field:'email', title: '邮箱', excel_width:15, searchList:{type:'input',operate:'LIKE'}}
-                ,{field:'status', title: '状态', excel_width:15,templet: '#switchStatus', sort: true, searchList:{type:'select',data:{$statusList},'operate':'='}}
-                ,{field:'logintime', title: '最后登陆时间', excel_width:15, minWidth: 150, searchList:{type:'input',event:'date',operate: 'RANGE'}}
-                ,{fixed: 'right', title:'操作', toolbar: '#actionbar', width:220}
+                ,{field:'username', title: "{:__('Username')}", excel_width:15, searchList:{type:'input',operate:'LIKE'}}
+                ,{field:'nickname', title: "{:__('Nickname')}", excel_width:15, searchList:{type:'input',operate:'LIKE'}}
+                ,{field:'groups_text', title:  "{:__('Group')}", excel_width:15}
+                ,{field:'email', title: "{:__('Email')}", excel_width:15, searchList:{type:'input',operate:'LIKE'}}
+                ,{field:'status', title: "{:__('Status')}", excel_width:15,templet: '#switchStatus', sort: true, searchList:{type:'select',data:{$statusList},'operate':'='}}
+                ,{field:'logintime', title: "{:__('Login time')}", excel_width:15, minWidth: 150, searchList:{type:'input',event:'date',operate: 'RANGE'}}
+                ,{fixed: 'right', title:"{:__('Operate')}", toolbar: '#actionbar', width:220}
             ]]
             ,page: {
-                layout: ['limit', 'count', 'prev', 'page', 'next', 'skip'] //自定义分页布局
-                ,first: false //不显示首页
-                ,last: false //不显示尾页
-
+                layout: ['limit', 'count', 'prev', 'page', 'next', 'skip']
+                ,all:"{:__('Total')}"
+                ,item:"{:__('Item')}"
+                ,confirm:"{:__('Confirm')}"
+                ,page:"{:__('Page')}"
+                ,ipage:"{:__('IPage')}"
+                ,to:"{:__('To')}"
+                ,first: "{:__('First')}"
+                ,last: "{:__('Last')}"
+                ,prev: "{:__('Previous')}"
+                ,next: "{:__('Next')}"
             }
             ,done: function(res, curr, count){
                 if(res.status == 'success') {
