--- a/application/admin/view/auth/group/index.html
+++ b/application/admin/view/auth/group/index.html
@@ -35,7 +35,7 @@
 <!--操作-->
 <script type="text/html" id="barDemo">
     {{# if(d.rules != '*'){  }}
-    <a class="layui-btn layui-btn-xs" lay-event="edit"><i class="layui-icon layui-icon-edit"></i>编辑</a>
+    <a class="layui-btn layui-btn-xs" lay-event="edit"><i class="layui-icon layui-icon-edit"></i>{:__('Edit')}</a>
     {{# }  }}
 </script>
 {/block}
@@ -68,10 +68,10 @@
             ,loading:true
             ,cols: [[
                 {type:'checkbox', fixed: 'left'}
-                ,{field:'name', title: '角色名称', sort: true}
-                ,{field:'status', title: '状态',templet: '#switchStatus', sort: true}
-                ,{field:'createtime', title: '操作时间', minWidth: 150}
-                ,{fixed: 'right', title:'操作', toolbar: '#barDemo', width:200}
+                ,{field:'name', title: "{:__('Group_name')}", sort: true}
+                ,{field:'status', title: "{:__('Status')}",templet: '#switchStatus', sort: true}
+                ,{field:'createtime', title: "{:__('Updatetime')}", minWidth: 150}
+                ,{fixed: 'right', title:"{:__('Operate')}", toolbar: '#barDemo', width:200}
             ]]
             ,done: function(res, curr, count){
                 if(res.status == 'success') {
