--- a/application/admin/view/user/user/edit.html
+++ b/application/admin/view/user/user/edit.html
@@ -14,41 +14,41 @@
             </colgroup>
             <tbody>
             <tr>
-                <td class="tdleft">角色<span class="tips">*</span></td>
+                <td class="tdleft">{:__('Group')}<span class="tips">*</span></td>
                 <td class="tdright">
                     {:build_select('group_id', $groupdata, $list['group_id'], ['class'=>'form-control selectpicker', 'multiple'=>'', 'lay-verify'=>'required', 'xm-select' => 'select'])}
                     <input type="hidden" name="id" value="{$list['id']}">
                 </td>
                 <td class="tdleft">{:__('Username')}<span class="tips">*</span></td>
                 <td class="tdright">
-                    <input type="text" name="username" data-rule="required;username" lay-verify="username" autocomplete="off" value="{$list['username']}" placeholder="登录账号" class="layui-input">
+                    <input type="text" name="username" data-rule="required;username" lay-verify="username" autocomplete="off" value="{$list['username']}" placeholder="" class="layui-input">
                     <input type="hidden" name="id" lay-verify="id" value="{$list['id']}">
                 </td>
             </tr>
             <tr>
                 <td class="tdleft">{:__('Nickname')}</td>
                 <td class="tdright">
-                    <input id="nickname" data-rule="required" name="nickname" placeholder="昵称" value="{$list['nickname']}" autocomplete="off" class="layui-input">
+                    <input id="nickname" data-rule="required" name="nickname" placeholder="" value="{$list['nickname']}" autocomplete="off" class="layui-input">
                 </td>
                 <td class="tdleft">{:__('Email')}</td>
                 <td class="tdright">
-                    <input type="email" name="email" data-rule="{required;email}" placeholder="邮箱" value="{$list['email']}" autocomplete="off" class="layui-input">
+                    <input type="email" name="email" data-rule="{required;email}" placeholder="" value="{$list['email']}" autocomplete="off" class="layui-input">
                 </td>
             </tr>
             <tr>
                 <td class="tdleft">{:__('Password')}</td>
                 <td class="tdright">
-                    <input type="password" data-rule="passwdrule" data-rule-passwdrule="[/{$passwd_complexity_rule[0]}/, '{$passwd_complexity_rule[1]}']" name="password" placeholder="密码" autocomplete="off" class="layui-input">
+                    <input type="password" data-rule="passwdrule" data-rule-passwdrule="[/{$passwd_complexity_rule[0]}/, '{$passwd_complexity_rule[1]}']" name="password" placeholder="" autocomplete="off" class="layui-input">
                 </td>
                 <td class="tdleft">{:__('Confirm password')}</td>
                 <td class="tdright">
-                    <input type="password" name="confirm_password" data-rule="{:__('Confirm password')}:match(password);" placeholder="确认密码"  autocomplete="off" class="layui-input">
+                    <input type="password" name="confirm_password" data-rule="{:__('Confirm password')}:match(password);" placeholder=""  autocomplete="off" class="layui-input">
                 </td>
             </tr>
             <tr>
                 <td class="tdleft">{:__('Mobile')}</td>
                 <td class="tdright">
-                    <input id="mobile" name="mobile" data-rule="" placeholder="邮箱" value="{$list['mobile']}" autocomplete="off" class="layui-input">
+                    <input id="mobile" name="mobile" data-rule="" placeholder="" value="{$list['mobile']}" autocomplete="off" class="layui-input">
                 </td>
                 <td class="tdleft">{:__('Level')}</td>
                 <td class="tdright">
@@ -108,7 +108,7 @@
             <tr>
                 <td class="tdleft">{:__('Status')}</td>
                 <td class="tdright">
-                    <input type="checkbox" name="status" lay-skin="switch" lay-text="启用|禁止"  {$list['status'] == 1? 'checked' : ''}>
+                    <input type="checkbox" name="status" lay-skin="switch" lay-text="{:__('Off')}|{:__('On')}"  {$list['status'] == 1? 'checked' : ''}>
                 </td>
             </tr>
             </tbody>
