--- a/application/admin/view/user/rule/index.html
+++ b/application/admin/view/user/rule/index.html
@@ -29,12 +29,12 @@
 
 <!--状态-->
 <script type="text/html" id="switchStatus">
-    <input type="checkbox" name="status" value="{{d.status}}" lay-skin="switch" lay-text="激活|禁用" lay-filter="ruleStatus" {{ d.status == 1 ? 'checked' : '' }}>
+    <input type="checkbox" name="status" value="{{d.status}}" lay-skin="switch" lay-text="{:__('On')}|{:__('Off')}" lay-filter="ruleStatus" {{ d.status == 1 ? 'checked' : '' }}>
 </script>
 
 <!--状态-->
 <script type="text/html" id="switchIsmenu">
-    <input type="checkbox" name="ismenu" value="{{d.ismenu}}" lay-skin="switch" lay-text="是|否" lay-filter="ruleIsmenu" {{ d.ismenu == 1 ? 'checked' : '' }}>
+    <input type="checkbox" name="ismenu" value="{{d.ismenu}}" lay-skin="switch" lay-text="{:__('Yes')}|{:__('No')}" lay-filter="ruleIsmenu" {{ d.ismenu == 1 ? 'checked' : '' }}>
 </script>
 
 <!--操作-->
@@ -80,12 +80,11 @@
             ,cols: [[
                 {type:'checkbox',sort:true}
                 ,{field:'id', title: 'ID', sort: true}
-                ,{field:'title', title: '规则名称'}
-                ,{field:'icon', title: '图标'}
-                ,{field:'ismenu', title: '是否为菜单', sort: true,templet: '#switchIsmenu'}
-                ,{field:'status', title: '状态',templet: '#switchStatus', sort: true}
-                ,{field:'name', title: '规则', minWidth: 150}
-                ,{align: 'center', title:'操作', toolbar: '#actionbar', width:220}
+                ,{field:'title', title: "{:__('Title')}"}
+                ,{field:'ismenu', title: "{:__('Ismenu')}", sort: true,templet: '#switchIsmenu'}
+                ,{field:'status', title: "{:__('Status')}",templet: '#switchStatus', sort: true}
+                ,{field:'name', title: "{:__('Name')}", minWidth: 150}
+                ,{align: 'center', title:"{:__('Operate')}", toolbar: '#actionbar', width:220}
             ]]
             ,page: {
                 layout: ['limit', 'count', 'prev', 'page', 'next', 'skip'] //自定义分页布局
