会员模块翻译

--- a/application/admin/view/user/group/edit.html
+++ b/application/admin/view/user/group/edit.html
@@ -20,7 +20,7 @@
             <tr>
                 <td class="tdleft">{:__('Status')}:</td>
                 <td class="tdright">
-                    <input type="checkbox" name="status" lay-skin="switch" lay-text="启用|禁止"  {$list['status'] == 1? 'checked' : ''}>
+                    <input type="checkbox" name="status" lay-skin="switch" lay-text="{:__('On')}|{:__('Off')}"  {$list['status'] == 1? 'checked' : ''}>
                 </td>
             </tr>
             <tr>
