--- a/application/admin/view/user/rule/edit.html
+++ b/application/admin/view/user/rule/edit.html
@@ -39,7 +39,7 @@
             <tr>
                 <td class="tdleft">{:__('Weigh')}</td>
                 <td class="tdright">
-                    <input type="weigh" name="weigh" data-rule="required;integer(+0)" placeholder="权重" value="{$list['weigh']}" autocomplete="off" class="layui-input">
+                    <input type="weigh" name="weigh" data-rule="required;integer(+0)" placeholder="" value="{$list['weigh']}" autocomplete="off" class="layui-input">
                 </td>
             </tr>
             <tr>
